Corrected overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,6 +92,7 @@ pre span {
   cursor: pointer;
   transition: 0.5s ease-in-out;
   transition: color 0.2s;
+  overflow: hidden;
 }
 .count:hover {
   color: var(--myYellow);
